# regintel

./: .gitignore  ARCHITECTURE.md  README.md  TODO.md  app.py  config.py  pyproject.toml
data/mock/: internal_controls.json  sample_regulation.md
design/v1/: Detailed-Design.md
design/v2/: Detailed-Design.md
design/v3/: Detailed-Design.md
design/v3.1/: Detailed-Design.md
models/: domain.py
services/: compliance_extractor.py  document_parser.py  embedding_service.py  gap_analyzer.py  llm_client.py  matcher.py  pipeline.py  recommendation_engine.py  report_generator.py
sessions/: 2026-06-30_business-communication-plan.md
styles/: custom.css
