[project]
name = "regintel"
version = "0.1.0"
description = "AI-powered compliance assistant (v1 prototype)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "scikit-learn>=1.5",
    "PyMuPDF>=1.24",
    "python-docx>=1.1",
    "httpx>=0.27",
    "streamlit>=1.38",
]

[project.optional-dependencies]
sbert = ["sentence-transformers>=3.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["models/", "services/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
